# qota-community-discord-bot

./: .air.linux.toml  .air.toml  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  docker-compose.yml  go.mod  main.go  nodemon.json  package.json  tsconfig.json
.cargo/: config.toml
bot/: bot.go
configs/: config.go
discord_bot/: Cargo.toml
discord_bot/src/: bot_helper.rs  commands.rs  commands_adm.rs  lib.rs  main.rs
mongodb/: Cargo.toml
mongodb/src/: lib.rs
mongodb_client/: Cargo.toml
mongodb_client/src/: lib.rs
shared/: Cargo.toml
shared/src/: cron_helper.rs  date_helper.rs  lib.rs  mix_helper.rs
shared/src/models/: mix.rs  mix_bans.rs  mix_schedule.rs  mod.rs  player.rs
shared/src/repositories/: mix.rs  player.rs
src/: config.ts  index.ts  main.rs
src/commands/: admins.ts  base.ts  index.ts
src/controllers/: players.rs
src/helpers/: mix-helper.ts
src/models/: guild.ts  mix-bans.ts  mix-schedule.ts  mix.ts  player.ts
src/models/types/: IGuild.ts  IMix.ts  IMixBans.ts  IMixSchedule.ts  IPlayer.ts
src/repositories/: guild-repository.ts  mix-repository.ts
