[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

mongodb_client = { path = "../mongodb_client" }

serde = "1.0.167"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
tokio = { version = "1.31.0" }
dotenv = "0.15.0"
serde_json = "1.0.100"
serenity = "0.11.6"
tabled = "0.15.0"
chrono = "0.4.26"
rand = "0.8.5"
tokio-cron-scheduler = "0.10.2"
uuid = "1.4.1"
color-print = "0.3.4"

futures = "0.3.28"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
